Fix iOS safe area spacing

--- a/src/Client/Shared/Components/FileDetailView.razor.scss
+++ b/src/Client/Shared/Components/FileDetailView.razor.scss
@@ -4,9 +4,8 @@
 @import '../Styles/abstracts/_mixins.scss';
 
 
-
 .content-body {
-    margin: $spacing-21 $spacing-0;
+    margin: $spacing-21 0;
     max-height: 100%;
     overflow-y: auto;
 
@@ -16,11 +15,11 @@
         align-content: center;
         background-color: color(gray-border);
         margin-bottom: $spacing-16;
-        margin-top: $spacing-18;
+        margin-top: $spacing-4;
         position: relative;
 
         .image-container {
-            height: 254px;
+            height: 256px;
             width: 100%;
             display: flex;
             align-items: center;
@@ -29,23 +28,20 @@
 
             .file-image-preview {
                 padding: $spacing-24;
-                max-height: 254px;
+                max-height: 256px;
                 max-width: 100%;
                 object-fit: contain;
                 position: absolute;
             }
 
             .file-image-preview-blur {
-                max-height: 254px;
                 max-width: 100%;
+                max-height: 256px;
                 object-fit: cover;
                 width: 100%;
                 height: 100%;
                 filter: blur(2px);
                 -webkit-filter: blur(2px);
-                -moz-filter: blur(2px);
-                -o-filter: blur(2px);
-                -ms-filter: blur(2px);
             }
 
             .image-file-icon {
@@ -109,18 +105,18 @@
     .file-name-row {
 
         .file-name-text {
-            margin: $letter-spacing-0;
-            font-size: $font-size-20;
             font-family: $open-sans-regular;
             line-height: $line-height-30;
             color: color(gray-content1);
+            font-size: $font-size-20;
             text-overflow: ellipsis;
             overflow: hidden;
+            margin: 0;
         }
     }
 
     .file-details-area {
-        padding: $spacing-21 $spacing-0 $spacing-31;
+        padding: $spacing-21 $spacing-0;
     }
 
     .bottom-body {
