--- a/src/Client/Shared/Components/FileDetailViewItem.razor.scss
+++ b/src/Client/Shared/Components/FileDetailViewItem.razor.scss
@@ -1,6 +1,7 @@
 ﻿@import '../Styles/abstracts/_variables.scss';
 @import '../Styles/abstracts/_functions.scss';
 
+
 .file-details-row {
     display: flex;
 
@@ -8,13 +9,13 @@
         font-size: $font-size-14;
         font-family: $open-sans-regular;
         line-height: $line-height-24;
-        margin: $letter-spacing-0;
+        margin: 0;
         margin-right: auto;
         color: color(gray-content1);
     }
 
     .file-detail-value {
-        margin: $letter-spacing-0;
+        margin: 0;
         margin-left: auto;
         font-size: $font-size-14;
         line-height: $line-height-24;
@@ -22,7 +23,8 @@
         color: color(gray-content1);
     }
 }
+
 .separate-item {
-    margin-top: $spacing-12;
-    margin-bottom: $spacing-12;
+    margin-top: $spacing-10;
+    margin-bottom: $spacing-10;
 }
