--- a/src/Client/Shared/wwwroot/app.scss
+++ b/src/Client/Shared/wwwroot/app.scss
@@ -10,13 +10,13 @@
 html, body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    overflow: hidden;
     user-select: none;
     -webkit-user-select: none;
     overscroll-behavior: none;
     font-family: $open-sans-regular;
     -webkit-tap-highlight-color: transparent;
-    overflow: hidden;
-    height: 100vh;
 
     @each $key, $value in $colors-light {
         --#{$key}: #{$value};
@@ -78,24 +78,17 @@ input[type=checkbox] {
     accent-color: $green-dark-base;
 }
 
-/*.fx-basic-page1 {
-     transform: scaley(0);
-    transform-origin: top;
-    transition: transform 600ms linear;
-}*/
-
 .fx-basic-page {
     height: 0;
-    padding-bottom: 81px;
     overflow: hidden;
-    //transition: height 150ms linear;
 }
 
-/*.fx-page-open-mode1 {
-    transform: scaleY(1);
-    height: 100vh;
-}*/
+@supports (-webkit-touch-callout: none) {
+    .fx-basic-page { 
+        padding-bottom: 21px;
+    }
+}
 
 .fx-page-open-mode {
-    height: 100vh;
+    height: 100%;
 }
